--- a/src/index.css
+++ b/src/index.css
@@ -1,416 +1,255 @@
-body,
-html {
-  width: 100%;
-  height: 100%;
-}
-
 body {
-  font-family: "Merriweather", "Helvetica Neue", Arial, sans-serif;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-hr {
-  max-width: 50px;
-  border-width: 3px;
-  border-color: #f05f40;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-hr.light {
-  border-color: #fff;
+/* my added css */
+*  {
+  background: #B3FFFC;
+  font-family: 'Shadows Into Light', cursive;
+  box-sizing: border-box;
 }
 
-a {
-  color: #f05f40;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
-}
-a:hover {
-  color: #f05f40;
-}
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+p {
+  font-size: 22px;
+  color: #cf6a87;
+  font-weight: bold;
+  font-family: 'Shadows Into Light', cursive;
 }
 
 h1 {
-  font-size: 3rem;
-  margin-bottom: 30px;
+  margin: auto 30px; 
+  padding: 10px;
+  color: #660033;
+  font-weight: bold;
+  font-family: 'Shadows Into Light', cursive;
 }
 
-.bg-primary {
-  background-color: #f05f40 !important;
+
+#myImage {
+  margin: auto 70px;
 }
 
-.bg-dark {
-  background-color: #212529 !important;
+#about-container, #image-container, .education-container {
+  margin: 0px 10px;
 }
 
-.text-faded {
-  color: rgba(255, 255, 255, 0.7);
+.key-title, .resume, .name, .title, .contact, .education {
+  font-weight: bold;
+  color: #660033;
+  font-family: 'Shadows Into Light', cursive;
 }
 
-section {
-  padding: 3rem 0;
+.name {
+  font-size: 4rem;
+  color: #660033;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  letter-spacing: 20px;
 }
 
-.section-heading {
-  margin-top: 0;
-}
-
-::-moz-selection {
-  color: #fff;
-  background: #212529;
-  text-shadow: none;
-}
-
-::selection {
-  color: #fff;
-  background: #212529;
-  text-shadow: none;
-}
-
-img::selection {
-  color: #fff;
-  background: transparent;
-}
-
-img::-moz-selection {
-  color: #fff;
-  background: transparent;
-}
-
-body {
-  -webkit-tap-highlight-color: #212529;
-}
-
-#mainNav {
-  border-bottom: 1px solid rgba(33, 37, 41, 0.1);
-  background-color: #fff;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
-}
-#mainNav .navbar-brand {
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #f05f40;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-}
-#mainNav .navbar-brand:focus,
-#mainNav .navbar-brand:hover {
-  color: #f05f40;
-}
-#mainNav .navbar-nav > li.nav-link,
-#mainNav .navbar-nav > li.nav-link:focus {
-  font-size: 0.9rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  cursor: pointer;
-  color: #212529;
-}
-#mainNav .navbar-nav > li.nav-link:hover,
-#mainNav .navbar-nav > li.nav-link:focus:hover {
-  color: #f05f40;
-}
-#mainNav .navbar-nav > li.nav-link.active,
-#mainNav .navbar-nav > li.nav-link:focus.active {
-  color: #f05f40 !important;
-  background-color: transparent;
-}
-#mainNav .navbar-nav > li.nav-link.active:hover,
-#mainNav .navbar-nav > li.nav-link:focus.active:hover {
-  background-color: transparent;
-}
-@media (min-width: 992px) {
-  #mainNav {
-    border-color: transparent;
-    background-color: #fff;
-  }
-  #mainNav .navbar-brand {
-    color: #f05f40;
-  }
-  #mainNav .navbar-brand:focus,
-  #mainNav .navbar-brand:hover {
-    color: rgba(0, 0, 0, 0.7);
-  }
-  #mainNav .navbar-nav > li.nav-link {
-    padding: 0.5rem 1rem;
-  }
-
-  #mainNav .navbar-nav > li.nav-link:hover,
-  #mainNav .navbar-nav > li.nav-link:focus:hover {
-    color: rgba(0, 0, 0, 0.7);
-  }
-  #mainNav.navbar-shrink {
-    border-bottom: 1px solid rgba(33, 37, 41, 0.1);
-    background-color: #fff;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    color: #f05f40;
-  }
-  #mainNav.navbar-shrink .navbar-brand:focus,
-  #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #f05f40;
-  }
-  #mainNav.navbar-shrink .navbar-nav > li.nav-link,
-  #mainNav.navbar-shrink .navbar-nav > li.nav-link:focus {
-    color: #212529;
-  }
-  #mainNav.navbar-shrink .navbar-nav > li.nav-link:hover,
-  #mainNav.navbar-shrink .navbar-nav > li.nav-link:focus:hover {
-    color: #f05f40;
-  }
-}
-
-div.masthead {
-  padding-top: 10rem;
-  padding-bottom: calc(10rem - 56px);
-  background-image: url("./assets/img/header.jpg");
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-div.masthead hr {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-div.masthead h1 {
+.job {
   font-size: 2rem;
-  margin-bottom: 30px;
-}
-div.masthead p {
-  font-weight: 300;
-}
-@media (min-width: 768px) {
-  div.masthead p {
-    font-size: 1.15rem;
-  }
-}
-@media (min-width: 992px) {
-  div.masthead {
-    height: 100vh;
-    min-height: 650px;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-  div.masthead h1 {
-    font-size: 2.5rem;
-  }
-}
-@media (min-width: 1200px) {
-  div.masthead h1 {
-    font-size: 3rem;
-  }
+  color: #660033;
+  display: flex;
+  justify-content: center;
+  align-content: center;       
 }
 
-.service-box {
-  max-width: 400px;
+.school-name {
+  font-weight: bolder;
+  color:#788b85
 }
 
-.portfolio-box {
+.card {
+  background-color: white;
+  border-radius: 2px;
+  height: 525px;
+  margin: 1rem;
   position: relative;
-  display: block;
-  max-width: 650px;
-  margin: 0 auto;
+  width: 325px;
+  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  text-align: left;
 }
-.portfolio-box .portfolio-box-caption {
-  position: absolute;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
+
+.card > .img-container {
+  height: 50%;
+  overflow: hidden;
   text-align: center;
-  opacity: 0;
-  color: #fff;
-  background: rgba(240, 95, 64, 0.9);
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
+  border-radius: 10px;
+  background-color: white;
 }
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
-  position: absolute;
-  top: 50%;
+.card > .img-container > img {
   width: 100%;
-  transform: translateY(-50%);
-  text-align: center;
+  padding: 25px;
+  background-color: white;
 }
-.portfolio-box
-  .portfolio-box-caption
-  .portfolio-box-caption-content
-  .project-category,
-.portfolio-box
-  .portfolio-box-caption
-  .portfolio-box-caption-content
-  .project-name {
-  padding: 0 15px;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-}
-.portfolio-box
-  .portfolio-box-caption
-  .portfolio-box-caption-content
-  .project-category {
-  font-size: 14px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-.portfolio-box
-  .portfolio-box-caption
-  .portfolio-box-caption-content
-  .project-name {
+
+.card > .content {
+  padding-right: 1rem;
   font-size: 18px;
-}
-.portfolio-box:hover .portfolio-box-caption {
-  opacity: 1;
-}
-.portfolio-box:focus {
-  outline: none;
-}
-@media (min-width: 768px) {
-  .portfolio-box
-    .portfolio-box-caption
-    .portfolio-box-caption-content
-    .project-category {
-    font-size: 16px;
-  }
-  .portfolio-box
-    .portfolio-box-caption
-    .portfolio-box-caption-content
-    .project-name {
-    font-size: 22px;
-  }
+  background-color: white;
+  color: #cf6a87;
+  font-weight: bold;
 }
 
-.text-primary {
-  color: #f05f40 !important;
+.card > .content > ul {
+  list-style-type: none;
+  background-color: white;
 }
 
-/* Buttons */
-.btn {
-  font-weight: 700;
-  text-transform: uppercase;
-  border: none;
-  border-radius: 300px;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+.card > .content > ul > li {
+  margin-top: 18px;
+  background-color: white;
 }
 
-.btn-xl {
-  padding: 1rem 2rem;
+.wrapper {
+  padding-top: 50px;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 20px;
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
 }
 
-.btn-primary {
-  background-color: #f05f40;
-  border-color: #f05f40;
-}
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active {
-  color: #fff;
-  background-color: #ee4b28 !important;
-}
-.btn-primary:active,
-.btn-primary:focus {
-  box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
+/* #footer {
+  margin: auto 700px;
+  padding: 5px;
+} */
+
+.icon {
+  padding: 10px;
 }
 
-/* Footer */
-footer a {
-  margin: 20pt;
+.nav {
+  justify-content: flex-end;
+  font-size: 24px;
 }
 
-footer i.fab {
-  font-size: 2rem;
+#port-icon {
+  background-color: white;
+  margin: 0px 20px;
 }
 
-a.white-link {
-  color: #fff;
+.project-title {
+  background-color: white;
+  font-weight: bold;
+  font-family: 'Shadows Into Light', cursive;
+
 }
 
-/* Contact Us Form */
-.form-control {
-  padding: 0.664rem 1rem;
-  font-size: 0.95rem;
-  line-height: 1.125rem;
-  color: #495057;
-  border: 1px solid #becad6;
-  font-weight: 300;
-  border-radius: 0.375rem;
-  transition: border-color 250ms cubic-bezier(0.27, 0.01, 0.38, 1.06), box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 1.06);
-  margin-bottom: 30px;
+.project-description {
+  background-color: white;
+  font-weight: normal;
+  color: #660033;
 }
 
-.form-control:hover {
-  border-color: #f05f40;
+.project-icons {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
-.form-control:focus {
-  color: #495057;
-  border-color: #f05f40;
-  box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+#contact-form {
+  margin: 15px 500px;
+  font-size: 18px;
+  color: #B3FFFC;
+  font-weight: bold;
 }
 
-.form-control:focus:hover {
-  border-color: #007bff;
+.contact-icons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
 }
 
-.form-control::-webkit-input-placeholder {
-  color: #868e96;
+.resume-container {
+  margin: 20px 50px;
+  color: #cf6a87;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-size: 22px;
 }
 
-.form-control:-ms-input-placeholder {
-  color: #868e96;
+.nav-link, .link, .btn {
+  color: #660033;
+  font-weight: bold;
 }
 
-.form-control::placeholder {
-  color: #868e96;
-}
-
-.form-control:disabled, .form-control[readonly] {
-  background-color: #f5f6f7;
-}
-
-.form-control:disabled:hover, .form-control[readonly]:hover {
-  cursor: not-allowed;
-}
-
-select.form-control:hover {
-  cursor: pointer;
-}
-
-form label,
-form .col-form-label,
-form .col-form-legend {
-  font-size: 0.95rem;
-}
-
-form label:hover {
-  cursor: pointer;
-}
-
-/* Error Warning */
-.error-text {
-  color: red;
-}
-
-/* Portfolio */
-.margin-top {
-  margin-top: 50px;
-}
-
-.portfolio-box-caption-content {
-  line-height: 2rem;
-}
-.portfolio-box-caption-content a:hover {
-  color: #fff;
+.nav-link:hover, .link:hover {
+  color: #cf6a87;
+  font-weight: bold;
   text-decoration: none;
 }
-.portfolio-box-caption-content i.fab {
-  font-size: 2rem;
+
+.active {
+  color: #cf6a87;
+}
+
+.banner {
+  width: 100%;
+}
+
+.my-image {
+  border-radius: 50%;
+  padding: 50px 50px;
+}
+
+.contact-container {
+  margin: 100px;
+  justify-content: center;
+}
+
+@media screen and (max-width: 767px) { 
+  p, .resume-container {
+    font-size: 20px;
+  }
+
+  .education, .resume {
+    font-size: 24px;
+  }
+
+  .image {
+    width: 200%;
+    height: 100%;
+  }
+
+  .name {
+    font-size: 35px;
+    color: #660033;
+    letter-spacing: normal;
+  }
+  
+  .job {
+    font-size: 30px;
+    color: #660033;
+  }
+
+  .nav {
+    justify-content: flex-end;
+    font-size: 22px;
+  }
+
+  .contact-icons, .icon-text {
+    margin: auto 50%; 
+  }
+  
 }
